@@ -222,6 +222,15 @@ class CPSInstaller(CMFInstaller):
             if data.get('display_in_cmf_calendar'):
                 display_in_cmf_calendar.append(ptype)
                 del data['display_in_cmf_calendar']
+            if data.get('use_content_status_history'):
+                ti.addAction(id='status_history',
+                               name='action_status_history',
+                               action='content_status_history',
+                               condition='',
+                               permission=('View',),
+                               category='workflow',
+                               visible=1)
+                del data['use_content_status_history']
             ti.manage_changeProperties(**data)
             self.log("  Added")
 
